# calf-wrapper

./: .gitignore  LICENSE  README.md  pyproject.toml
reproduce/cartpole/: fallback.sh
reproduce/cartpole/base/: early.sh  late.sh  mid.sh
reproduce/cartpole/calf_wrapper/balanced/: early.sh  late.sh  mid.sh
reproduce/cartpole/calf_wrapper/brave/: early.sh  late.sh  mid.sh
reproduce/cartpole/calf_wrapper/conservative/: early.sh  late.sh  mid.sh
reproduce/pendulum/: fallback.sh
reproduce/pendulum/base/: early.sh  late.sh  mid.sh
reproduce/pendulum/calf_wrapper/balanced/: early.sh  late.sh  mid.sh
reproduce/pendulum/calf_wrapper/brave/: early.sh  late.sh  mid.sh
reproduce/pendulum/calf_wrapper/conservative/: early.sh  late.sh  mid.sh
run/: .gitignore  README.md  __init__.py  eval.py  train_ppo.py
run/analysis/: main.ipynb
run/scripts/: eval_calf_wrapper.py  eval_cartpole_checkpoints.sh  eval_cartpole_fallback.sh  eval_checkpoints.py  eval_pendulum_fallback.sh  extract_data_from_mlflow.py
src/: __init__.py  calf_wrapper.py  callback.py
src/controllers/: cartpole.py  controller.py  pendulum.py
src/envs/: cartpole.py
src/optimizers/: bruteforce.py
src/utils/: __init__.py  mlflow.py  tuner.py
tests/: test_calf_wrapper.py  test_cartpole_controller.py  test_pendulum_controller.py
