[project]
name = "calf-eval-wrapper"
version = "0.1.0"
description = ""
authors = [
    {name = "antonbolychev",email = "bolychev.anthon@yandex.ru"},
    {name = "osinenkop",email = "osinenko.pavel@yandex.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "optuna==4.2.0",
    "optuna-dashboard==0.17.0",
    "stable-baselines3==2.3.2",
    "torch==2.5.1",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "gymnasium==0.29.0",
    "matplotlib==3.9.2",
    "mlflow==2.20.0",
    "scipy==1.14.1",
    "pygame==2.6.1",
    "tyro==0.9.13",
    "pytest==8.3.4"
]

[tool.poetry]
packages = [
    { include = "src" },
    { include = "run" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
