[project]
name = "calf-wrapper"
version = "0.1.0"
description = ""
authors = [
    {name = "Anton Bolychev",email = "bolychev.anthon@yandex.ru"},
    {name = "Georgiy Malaniya", email = "pwlsd.gm@gmail.com"},
    {name = "Grigoriy Yaremenko", email = "grigory.yaremenko@skoltech.ru"},
    {name = "Anastasia Krasnaya", email = "an.krasnaya@gmail.com"},
    {name = "Pavel Osinenko",email = "osinenko.pavel@yandex.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "optuna==4.2.0",
    "optuna-dashboard==0.17.0",
    "stable-baselines3==2.3.2",
    "torch==2.5.1",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "gymnasium[mujoco]==0.29.0",
    "matplotlib==3.9.2",
    "mlflow==2.20.0",
    "scipy==1.14.1",
    "pygame==2.6.1",
    "tyro==0.9.13",
    "pytest==8.3.4",
    "loguru>=0.7.3",
    "ipykernel>=6.29.5",
    "scienceplots>=2.1.1",
]

[tool.poetry]
packages = [
    { include = "src" },
    { include = "run" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
